--- a/MobilePlatformsProjectJS/CurrencyHistoryPage.html
+++ b/MobilePlatformsProjectJS/CurrencyHistoryPage.html
@@ -1,6 +1,6 @@
 ﻿
-<script src="lib/chartjs/Chart.min.js"></script>
-<script src="js/chartScript.js"></script>
+<script src="Scripts/chart-2.7.1.min.js"></script>
+<script src="js/ChartHandler.js"></script>
 <div align="center">
     <h3 id="hearderText" color="black"></h3>
     <input id="startDate" type="date" min="2002-01-02" />
