--- a/MobilePlatformsProjectJS/MainPage.html
+++ b/MobilePlatformsProjectJS/MainPage.html
@@ -1,5 +1,5 @@
-﻿<script src="js/firstPage.js"></script>
-<script src="js/listScript.js"></script>
+﻿<script src="js/main.js"></script>
+<script src="js/RestHandler.js"></script>
 
 <div data-win-control="WinJS.UI.AppBar">
     <button disabled="true" id="generateButton" data-win-control="WinJS.UI.AppBarCommand"
