--- a/MobilePlatformsProjectJS/CurrencyHistoryPage.html
+++ b/MobilePlatformsProjectJS/CurrencyHistoryPage.html
@@ -7,7 +7,7 @@
     <input id="endDate" type="date" min="2002-01-02" />
 </div>
 
-<div data-win-control="WinJS.UI.AppBar">
+<div data-win-control="WinJS.UI.AppBar" id="appBar">
     <button id="generateChart" data-win-control="WinJS.UI.AppBarCommand"
             data-win-options="{id:'generateChart',
             type: 'button',
