--- a/MobilePlatformsProjectJS/MainPage.html
+++ b/MobilePlatformsProjectJS/MainPage.html
@@ -1,7 +1,7 @@
 ﻿<script src="js/main.js"></script>
 <script src="js/RestHandler.js"></script>
 
-<div data-win-control="WinJS.UI.AppBar">
+<div data-win-control="WinJS.UI.AppBar" iid="appBar">
     <button disabled="true" id="generateButton" data-win-control="WinJS.UI.AppBarCommand"
             data-win-options="{id:'generateButton',
     type: 'button',
