--- a/MobilePlatformsProjectJS/MainPage.html
+++ b/MobilePlatformsProjectJS/MainPage.html
@@ -7,7 +7,7 @@
     type: 'button',
     label:'Generuj wykres',
     tooltip:'Generuj wykres',
-    icon:'view',
+    icon:'fourbars',
     section:'primary'
     }" />
     <button id="exitButton" data-win-control="WinJS.UI.AppBarCommand"
