--- a/MobilePlatformsProjectJS/MainPage.html
+++ b/MobilePlatformsProjectJS/MainPage.html
@@ -22,23 +22,22 @@
 
 <div align="center">
     Rok:
-    <select id="yearSelect"></select>
+    <select id="pickerYear"></select>
     Dzień:
-    <select id="daySelect"></select>
+    <select id="pickerDay"></select>
 </div>
 
 <div id="mediumListIconTextTemplate" data-win-control="WinJS.Binding.Template">
-    <div style="width: 150px; height: 100px; background: LightSteelBlue;">
-        <div>
-            <h4 data-win-bind="innerText: code" align="center" color="red"></h4>
-            <h5 data-win-bind="innerText: currency" align="center"></h5>
-            <h4 data-win-bind="innerText: mid" align="center"></h4>
-        </div>
-    </div>
+        <table style="width:200px; height=200px; background: burlywood;">
+                <th data-win-bind="innerText: code" align="center" color="red" />
+                <th data-win-bind="innerText: currency" align="center" />
+                <th data-win-bind="innerText: mid" align="center" />
+            </tr>
+        </table>
 </div>
 
 <div id="basicListView"
      data-win-control="WinJS.UI.ListView"
-     data-win-options="{itemDataSource : SourceData.itemList.dataSource,
+     data-win-options="{itemDataSource : SourceData.itemList.dataSource,   
     itemTemplate: select('#mediumListIconTextTemplate'),
         tapBehavior: 'toggleSelect' }" />
